# formogenhetsanalys

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  REUSE.toml  SECURITY.md  codecov.yml  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  reuse.yml  scorecard.yml  security.yml  zenodo.yml
.reuse/: dep5
LICENSES/: CC0-1.0.txt
R/: decomposition_plots.R  diagnostics.R
benchmarks/: bench_gnn_training.py  bench_top_shares.py
data/: SYNTHETIC.md
data/synthetic/: assets.parquet  edges_kinship.parquet  edges_ownership.parquet  firms.parquet  households.parquet
docs/: about.md  accessibility.md  api.md  architecture.md  citation.md  data.md  deviations.md  dpia-summary.md  eu-compliance.md  fair4rs.md  gdpr.md  glossary.md  governance.md  graph-schema.md  index.md  methodology.md  osor.md  reproducibility.md  swedish-legal-basis.md  user_guide.md  valuation.md
replication/: README.md  expected_receipts.json  receipts.json  run_all.sh
scripts/: compare_receipts.py  fetch_licenses.py  generate_changelog.py  make_synthetic_graph.py  sbom.py
src/formogenhetsanalys/: __init__.py  cli.py  config.py  logging.py  paths.py  seeds.py
src/formogenhetsanalys/estimation/: __init__.py  decomposition.py  dna_adjustment.py  top_shares.py
src/formogenhetsanalys/evaluation/: __init__.py  bootstrap.py  metrics.py  posterior.py
src/formogenhetsanalys/graph/: __init__.py  builder.py  loaders.py  sampling.py  schema.py
src/formogenhetsanalys/ingestion/: __init__.py  asset_prices.py  firm_register.py  manifest.py  wealth_register.py
src/formogenhetsanalys/models/: __init__.py  baselines.py  bayesian_priors.py  hetero_gnn.py  variational.py
src/formogenhetsanalys/pipelines/: __init__.py  dag.py  runner.py
src/formogenhetsanalys/reporting/: __init__.py  figures.py  pdf_a.py  tables.py
src/formogenhetsanalys/valuation/: __init__.py  harmonisation.py  listed_equity.py  real_estate.py  unlisted_equity.py
stata/: descriptives.do  replication.do  top_shares.do
tests/: conftest.py  test_cli.py  test_determinism.py  test_estimation.py  test_estimation_decomposition.py  test_estimation_top_shares.py  test_evaluation.py  test_graph.py  test_graph_builder.py  test_graph_schema.py  test_ingestion.py  test_models.py  test_models_bayesian.py  test_models_hetero_gnn.py  test_pipeline.py  test_reporting.py  test_reuse_compliance.py  test_seeds.py  test_valuation.py
