[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "formogenhetsanalys"
version = "0.1.0"
description = "Graph-aware estimation and decomposition of wealth concentration in Sweden."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "EUPL-1.2" }
authors = [
  { name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundström Imanov", email = "olaf.laitinen@su.se" },
]
maintainers = [
  { name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundström Imanov", email = "olaf.laitinen@su.se" },
]
keywords = [
  "wealth concentration",
  "Sweden",
  "graph neural networks",
  "Bayesian inference",
  "Distributional National Accounts",
  "EUPL-1.2",
  "OSOR",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=15",
  "scikit-learn>=1.4",
  "networkx>=3.3",
  "matplotlib>=3.8",
  "pydantic>=2.6",
  "typer>=0.12",
  "structlog>=24.1",
  "rich>=13",
  "httpx>=0.27",
]

[project.optional-dependencies]
gnn = [
  "torch>=2.3",
  "torch-geometric>=2.5",
]
bayes = [
  "numpyro>=0.14",
  "jax>=0.4.28",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3.5",
  "pytest-randomly>=3.15",
  "pytest-benchmark>=4",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "nox>=2024.4.15",
  "reuse>=4",
  "cyclonedx-bom>=4",
  "pip-audit>=2.7",
  "bandit>=1.7",
  "pandas-stubs>=2.2",
  "types-networkx>=3.3",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mike>=2",
]
bench = [
  "pytest-benchmark>=4",
]

[project.scripts]
formogenhetsanalys = "formogenhetsanalys.cli:main"

[project.urls]
Homepage = "https://github.com/olaflaitinen/formogenhetsanalys"
Documentation = "https://olaflaitinen.github.io/formogenhetsanalys"
Repository = "https://github.com/olaflaitinen/formogenhetsanalys"
Issues = "https://github.com/olaflaitinen/formogenhetsanalys/issues"
Changelog = "https://github.com/olaflaitinen/formogenhetsanalys/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/formogenhetsanalys"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "docs/",
  "LICENSE",
  "LICENSES/",
  "NOTICE",
  "CITATION.cff",
  "README.md",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "S", "A", "COM", "PIE", "RET", "TCH", "ARG", "DTZ"]
ignore = [
  "COM812",
  "S101",
  "PLR0913",
  "PLR2004",
  "PLC2401",
  "SIM108",
  "PLC0415",
  "TC001",
  "TC002",
  "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001", "ARG002", "PLR0913"]
"benchmarks/*" = ["S101", "ARG001"]
"src/formogenhetsanalys/models/hetero_gnn.py" = ["ARG002", "E501", "PLC0415"]
"src/formogenhetsanalys/cli.py" = ["ARG001", "PLC0415"]
"src/formogenhetsanalys/pipelines/runner.py" = ["ARG001", "PLC0415"]
"src/formogenhetsanalys/models/baselines.py" = ["ARG001"]
"src/formogenhetsanalys/ingestion/asset_prices.py" = ["ARG001"]
"src/formogenhetsanalys/estimation/dna_adjustment.py" = ["PLC0415"]
"src/formogenhetsanalys/estimation/decomposition.py" = ["PLR2004"]
"src/formogenhetsanalys/estimation/top_shares.py" = ["PLR2004"]
"src/formogenhetsanalys/evaluation/metrics.py" = ["PLC0415"]
"src/formogenhetsanalys/evaluation/posterior.py" = ["PLC0415"]
"src/formogenhetsanalys/graph/builder.py" = ["PLC0415"]
"src/formogenhetsanalys/graph/sampling.py" = ["B905"]
"src/formogenhetsanalys/models/bayesian_priors.py" = ["PLC0415"]
"src/formogenhetsanalys/models/variational.py" = ["PLC0415", "B905"]
"src/formogenhetsanalys/reporting/pdf_a.py" = ["PLC0415"]
"src/formogenhetsanalys/seeds.py" = ["PLC0415"]
"src/formogenhetsanalys/valuation/harmonisation.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "torch.*",
  "torch_geometric.*",
  "numpyro.*",
  "jax.*",
  "sklearn.*",
  "matplotlib.*",
  "pyarrow.*",
  "polars.*",
  "structlog.*",
  "networkx.*",
  "hypothesis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--import-mode=importlib"]
markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
  "gpu: marks tests that require a GPU",
  "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/formogenhetsanalys"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]

[tool.bandit]
targets = ["src"]
skips = []
